src/docker/kubernates-handbook/src/theory/service/my-service-endpoints.yml
kind: Endpoints
apiVersion: v1
metadata:
  name: my-service
subsets:
  - addresses:
      - ip: 1.2.3.4
    ports:
      - port: 9376
