src/docker/kubernates-handbook/src/theory/service/my-service-without-selector.yml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
